deploy.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app 
    spec:
      containers:
      - name: node-app
        image: moiseshl/node-app:0.0.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
spec:
  type: LoadBalancer
  ports:
  - port: 30000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
---
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: node-users
  name: node-users 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-users
  template:
    metadata:
      labels:
        app: node-users 
    spec:
      containers:
      - name: node-users
        image: moiseshl/node-users:0.0.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-users
  name: node-users
spec:
  type: LoadBalancer
  ports:
  - port: 9100
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-users
